--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Auxillaries</title>
+        <title>Introduction</title>
         <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
     <body class="bg">
         <div  id="header">
-        <h3>Auxillaries</h3>
+        <h3>Introduction</h3>
         <ul>
         <li><a href=pr01.html>Present Tense</a></li>
         <li><a href=pr02.htm>Past Tense</a></li>
         <li><a href=pr03.html>Future Tense</a></li>
         </ul>
+        </div>
+        <h5>Contributers:</h5>
+        <br>
+        <div id="profile">
+            <img src="https://admissions.nic.in/ACPDC/Applicant/Handler/ViewUploadedDocs.ashx?boardId=120012221&rollno=2212001000189&roundNo=1&objectId=5decb848894c4dbd90ae0db25535f261&doctype=02&format=jpg">
+            <h6>Heet Radadiya</h6>
         </div>
 
     </body>
