--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h5>Contributers:</h5>
         <br>
         <div id="profile">
-            <img src="https://admissions.nic.in/ACPDC/Applicant/Handler/ViewUploadedDocs.ashx?boardId=120012221&rollno=2212001000189&roundNo=1&objectId=5decb848894c4dbd90ae0db25535f261&doctype=02&format=jpg">
+            <img src="Heet.jpg">
             <h6>Heet Radadiya</h6>
         </div>
 
