--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br>
         <div id="profile">
             <h5>Contributers:</h5>
-            <img src="Heet.jpg" height="100px" width="60px">
+            <img src="IMG20201210101901.jpg" height="100px" width="60px">
             <h6>Heet Radadiya</h6>
         </div>
 
