--- a/Might.html
+++ b/Might.html
@@ -1,10 +1,12 @@
 <html>
 <head>
 <title>Might</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<div>
 <h2><center><b>~<u>Might</u>~</b></center></h2>
+</div>
 
 (A) 'Might' is the past tense of 'may'.<br><br>
 
