--- a/Might.html
+++ b/Might.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Might</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css" type="text\css">
 </head>
 <body>
 <div>
