--- a/table.html
+++ b/table.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Table of content</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Auxillaries</h1>
