--- a/table.html
+++ b/table.html
@@ -4,7 +4,7 @@
         <title>Table of content</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body class="bg">
         <h1>Auxillaries</h1>
             <Table>
                 <tr>
