--- a/could.html
+++ b/could.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>could</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body bgcolor ="black">
 <h2><font color ="yellow"><center><u>~COULD~</u></center></h2>
