--- a/could.html
+++ b/could.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>could</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         
@@ -17,7 +18,7 @@
             
         <p>
             <b>
-                COULD' indicates the ability to do something. it is used to express what one was able to do in the past.
+                COULD indicates the ability to do something. it is used to express what one was able to do in the past.
             </b> 
         </p>
 
