--- a/could.html
+++ b/could.html
@@ -8,7 +8,7 @@
         
         <h2>
             <center>
-                <u>~COULD~</u>
+                <u>COULD</u>
             </center>
         </h2>
 
