--- a/could.html
+++ b/could.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>could</title>
+        <title>Could</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body class="bg">
         
         <h2>
             <center>
