Update and rename Might.html to might.html

--- a/might.html
+++ b/might.html
@@ -3,10 +3,10 @@
 <title>Might</title>
 <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-<div>
+<body id="bg">
+
 <h2><center><b>~<u>Might</u>~</b></center></h2>
-</div>
+
 
 (A) 'Might' is the past tense of 'may'.<br><br>
 
