--- a/might.html
+++ b/might.html
@@ -5,10 +5,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body class="bg">
-        <h2>
-            <center><b><u>Might</u></b></center>
-        </h2>
-
+        <div id="content">
+            <h2 class="title">
+                <center><b><u>Might</u></b></center>
+            </h2>
+        </div>
          (A) 'Might' is the past tense of 'may'.<br><br>
 
         <b>Example:</b><br>
