--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h6>Heet Radadiya</h6>
         </div>
 
-        <iframe src="docs.google.com/presentation/d/1F6nNG1qVJEzLcI1zNgrb_7dTuqfOBym9WwXeoFK0ZwI/present?token=AC4w5VjCoOrcKjmpHNO187hSI20JNfNaZQ%3A1665820339320&includes_info_params=1&eisi=CIKS16zg4foCFTyQTwkdnm0N1w&slide=id.gc6f972163_0_0" height="500px" width="1500px"></iframe>
+        <iframe src="https://docs.google.com/presentation/d/1F6nNG1qVJEzLcI1zNgrb_7dTuqfOBym9WwXeoFK0ZwI/edit?usp=sharing" height="500px" width="1500px"></iframe>
 
     </body>
 </html>
