--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h6>Heet Radadiya</h6>
         </div>
 
-        <iframe src="https://docs.google.com/presentation/d/1F6nNG1qVJEzLcI1zNgrb_7dTuqfOBym9WwXeoFK0ZwI/edit?usp=sharing" height="500px" width="1300px"></iframe>
+        <iframe src="https://docs.google.com/presentation/d/1F6nNG1qVJEzLcI1zNgrb_7dTuqfOBym9WwXeoFK0ZwI/present?token=AC4w5Vi8wOZIS512-65QR3iNXqb6JEg2ig%3A1665821701715&includes_info_params=1&eisi=CKSWqbbl4foCFTyQTwkdnm0N1w&slide=id.gc6f972163_0_0" height="500px" width="1300px"></iframe>
 
     </body>
 </html>
