--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <img src="images/IMG20201210101901.jpg" height="100px" width="60px">
             <h6>Heet Radadiya</h6>
         </div>
-
-        <iframe src="https://docs.google.com/presentation/d/1F6nNG1qVJEzLcI1zNgrb_7dTuqfOBym9WwXeoFK0ZwI/edit?usp=sharing" height="500px" width="1300px"></iframe>
+        
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQPYwSGHzu0DESTQv2-ARkkCDPfMjeppq8mQwpdI_AeprGo3KMbk5jKQLKUuMavFPWbc7DrRySOZRpn/embed?start=false&loop=false&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
     </body>
 </html>
