--- a/would.html
+++ b/would.html
@@ -10,20 +10,20 @@
                 Would
             </h1>
             <p>(a) 'Would' is used as past form of 'will'/;shall' in indirect speech</p>
-            <p><b> Example</b>></p>
+            <p><b> Example:-</b>></p>
             <p>1. She sid to me, "HE'll give me some more chocolates".</p>
             <p>2. She told me that he <b>would</b> give her some more chocalates. </p>
 
             <p>(b)'Would' is used to make a polite requst in a question sentence.</p>
-            <p>Example</p>
+            <p><b> Example:-</b></p>
             <p><b>Would</b> you like to have coffee?</p>
 
             <p>(c) 'Would' is used to express desire and preference.</p>
-            <p>Example</p>
+            <p><b> Example:-</b></p>
             <p>I <b>would</b> prefer tea or coffee.</p>
 
             <p>(d) 'Would' is used in conditional sentences.</p>
-            <p>Example</p>
+            <p><b> Example:-</b></p>
             <p>They <b>would</b> hire a cab if they did not have a car with them at that time.</p>
 
             <p></p>
