--- a/would.html
+++ b/would.html
@@ -10,7 +10,7 @@
                 Would
             </h1>
             <p>(a) 'Would' is used as past form of 'will'/;shall' in indirect speech</p>
-            <p><b> Example:-</b>></p>
+            <p><b> Example:-</b></p>
             <p>1. She sid to me, "HE'll give me some more chocolates".</p>
             <p>2. She told me that he <b>would</b> give her some more chocalates. </p>
 
