--- a/would.html
+++ b/would.html
@@ -11,7 +11,7 @@
             </h1>
             <p>(a) 'Would' is used as past form of 'will'/;shall' in indirect speech</p>
             <p><b> Example:-</b></p>
-            <p>1. She sid to me, "HE'll give me some more chocolates".</p>
+            <p>1. She sid to me, "He'll give me some more chocolates".</p>
             <p>2. She told me that he <b>would</b> give her some more chocalates. </p>
 
             <p>(b)'Would' is used to make a polite requst in a question sentence.</p>
