--- a/would.html
+++ b/would.html
@@ -9,10 +9,10 @@
             <h1>
                 Would
             </h1>
-            <p>(a) 'Would' is used as past form of 'will'/'shall' in indirect speech</p>
+            <p>(a) 'Would' is used as past form of 'will'/'shall' in indirect speech.</p>
             <p><b> Example:-</b></p>
-            <p>1. She sid to me, "He'll give me some more chocolates".</p>
-            <p>2. She told me that he <b>would</b> give her some more chocalates. </p>
+            <p>1. She said to me, "He'll give me some more chocolates".</p>
+            <p>2. She told me that he <b>would</b> give her some more chocolates. </p>
 
             <p>(b)'Would' is used to make a polite requst in a question sentence.</p>
             <p><b> Example:-</b></p>
