--- a/would.html
+++ b/would.html
@@ -76,7 +76,7 @@
             <b> Example:-</b>
         </p>
         
-        <p class="example">
+        <p class="examples">
             1.They <b>would</b> hire a cab if they did not have a car with them at that time.
         </p>
 
