--- a/can.html
+++ b/can.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Modal Auxiliaries</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body class="bg">
