--- a/can.html
+++ b/can.html
@@ -54,70 +54,94 @@
         </p>
         <br>
 
-        <h4>
-            <b><u>(c)</u></b>'Can' is used to show the possibility of something happening. 
+        <h5 class="uses">
+            (c)
+        </h5>
+
+        <h4 class="uses1">
+            'Can' is used to show the possibility of something happening. 
         </h4>
 
-        <h3>
+        <h3 class="title">
             <i><u>Example:-</u>~</i><br><br>
         </h3>
 
-        <p>
+        <p class="examples">
             1. He <b>can</b> be at the crunch.<br>
         </p>
         
-        <p>
+        <p class="examples">
             2. She <b>can</b> be in the bus.
         </p> 
         <br>
 
-        <h4>
-            <b><u>(d)</u></b>&nbsp;&nbsp;'Can' is used to show conditions.
+        <h5 class="uses">
+            (d)
+        </h5>
+
+        <h4 class="uses1">
+            'Can' is used to show conditions.
         </h4>
 
-        <h4><i><u>Example:</u></i><br><br></h4>
+        <h4 class="title">
+            <i><u>Example:</u></i><br><br>
+        </h4>
 
-        <h4>
+        <h4 class="examples">
             1. Anyone <b>can</b> learn to ride a bike, if they are not afraid to try.
         </h4>
         <br>
 
-        <h4>
-            <b><u>(e)</u></b>'Can' is used to show a polite request.
+        <h5 class="uses">
+            (e)
+        </h5>
+
+        <h4 class="uses1">
+            'Can' is used to show a polite request.
         </h4>
 
-        <h3>
+        <h3 class="title">
             <i><u>Example:</u>~</i><br><br>
         </h3>
 
-        <p>
+        <p class="example">
             1. <b>can</b> you teach me to ride a bike?
         </p> 
         <br>
 
-        <h4>
-            <b><u>(f)</u></b>'Can' is used to show willingness.
+        <h5 class="uses">
+            (f)
+        </h5>
+
+        <h4 class="uses1">
+            'Can' is used to show willingness.
         </h4>
 
-        <h3>
+        <h3 class="title">
             <i><u>Example:-</u>~</i><br><br>
         </h3>
 
-        <p>
+        <p class="examples">
             1.I <b>can</b> teach you.
         </p> 
         <br>
 
-        <h4>
-            <b><u>(g)</u></b>'Can' is used to show probability.
+        <h5 class="uses">
+            (g)
+        </h5>
+
+        <h4 class="uses1">
+            'Can' is used to show probability.
         </h4>
 
-        <h3>
+        <h3 class="title">
             <i><u>Example:-</u></i><br><br>
         </h3>
-        <p>
+
+        <p class="examples">
             1. It <b>can</b> John. He has long hair and is wearing glasses.at the crunch.
         </p>
+        
         <br>
     </body>
 </html>
