--- a/can.html
+++ b/can.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Modal Auxiliaries</title>
+        <title>CAN</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 
@@ -141,7 +141,7 @@
         <p class="examples">
             1. It <b>can</b> John. He has long hair and is wearing glasses.at the crunch.
         </p>
-        
+
         <br>
     </body>
 </html>
