--- a/can.html
+++ b/can.html
@@ -104,7 +104,7 @@
             <i><u>Example:</u>~</i><br><br>
         </h3>
 
-        <p class="example">
+        <p class="examples">
             1. <b>can</b> you teach me to ride a bike?
         </p> 
         <br>
