--- a/can.html
+++ b/can.html
@@ -17,7 +17,7 @@
         </h5>
         
         <h4 class="uses1">
-            'Can' is used to express ability.It means 'am/is/are+able to' 
+            'Can' is used to express ability. It means 'am/is/are+able to' 
         </h4>
 
         <h3 class="title">
@@ -38,7 +38,7 @@
         </h5>
 
         <h4 class="uses1">
-            'Can' is sometimes used to give permission.It means one is allowed to do something.
+            'Can' is sometimes used to give permission. It means one is allowed to do something.
         </h4>
 
         <h3 class="title">
@@ -84,7 +84,7 @@
         </h4>
 
         <h4 class="title">
-            <i><u>Example:</u></i><br><br>
+            <i><u>Example:-</u></i><br><br>
         </h4>
 
         <h4 class="examples">
@@ -101,7 +101,7 @@
         </h4>
 
         <h3 class="title">
-            <i><u>Example:</u>~</i><br><br>
+            <i><u>Example:-</u>~</i><br><br>
         </h3>
 
         <p class="examples">
@@ -139,7 +139,7 @@
         </h3>
 
         <p class="examples">
-            1. It <b>can</b> John. He has long hair and is wearing glasses.at the crunch.
+            1. It <b>can</b> John. He has long hair and is wearing glasses at the crunch.
         </p>
 
         <br>
