--- a/shall.html
+++ b/shall.html
@@ -15,7 +15,7 @@
         </h5>
         
         <h4 class="uses1">
-        <u><b>'Shall' and 'Will'</b></u> are used for the future. The future event may be a result of our intention, wish, ditermination, promise or willingness.<br>
+        <u><b>'Shall' and 'Will'</b></u> are used for the future. The future event may be a result of our intention, wish, determination, promise or willingness.<br>
         </h4>
 
         <h3 class="title">
@@ -52,7 +52,7 @@
             1. <b>Will</b> you clean this table, please?<br>
         </p>
 
-        <p>
+        <p class="examples">
             2. <b>Shall</b> i bring your book?<br>
         </p>
         <br>
