--- a/shall.html
+++ b/shall.html
@@ -71,7 +71,7 @@
         <b><u>Example:-</u></b><br>
         </h3>
 
-        <p>
+        <p class="examples">
             1.He <b>will</b> talk about nothing but movies.<br>
         </p>
         <br>
