--- a/shall.html
+++ b/shall.html
@@ -82,14 +82,14 @@
         </h5>
 
         <h4 class="uses1">
-        <b>'will'</b> is used to show assumption also.<br>
+        <b>'Will'</b> is used to show assumption also.<br>
         </h4>
 
         <h3 class="title">
         <b><u>Example:-</u></b><br>
         </h3>
 
-        <p>
+        <p class="examples">
         1.He <b>will</b> be the clerk, i think.<br>
         </p>
         <br>
@@ -107,7 +107,7 @@
         <b><u>Example:-</u></b><br>
         </h3>
 
-        <p>
+        <p class="examples">
             1.I <b>will</b> surely help you in that matter at a right time.<br>
         </p>
     </body>
