--- a/shall.html
+++ b/shall.html
@@ -49,11 +49,11 @@
         </h3>
 
         <p class="examples">
-            1. <b>Will</b> you clean this table, please?<br>
+            1. <b>will</b> you clean this table, please?<br>
         </p>
 
         <p class="examples">
-            2. <b>Shall</b> i bring your book?<br>
+            2. <b>shall</b> i bring your book?<br>
         </p>
         <br>
         <br>
@@ -90,7 +90,7 @@
         </h3>
 
         <p class="examples">
-        1.He <b>will</b> be the clerk, i think.<br>
+        1.He <b>will</b> be the clerk, I think.<br>
         </p>
         <br>
         <br>
