--- a/can.html
+++ b/can.html
@@ -21,7 +21,7 @@
         </h4>
 
         <h3 class="title">
-            <i><u>Example:-</u>~</i><br><br>
+            <i><u>Example:-</u></i><br><br>
         </h3>
         
         <p class="examples">
@@ -42,7 +42,7 @@
         </h4>
 
         <h3 class="title">
-            <i><u>Example:-</u>~</i><br><br>
+            <i><u>Example:-</u></i><br><br>
         </h3>
 
         <p class="examples">
@@ -63,7 +63,7 @@
         </h4>
 
         <h3 class="title">
-            <i><u>Example:-</u>~</i><br><br>
+            <i><u>Example:-</u></i><br><br>
         </h3>
 
         <p class="examples">
@@ -101,7 +101,7 @@
         </h4>
 
         <h3 class="title">
-            <i><u>Example:-</u>~</i><br><br>
+            <i><u>Example:-</u></i><br><br>
         </h3>
 
         <p class="examples">
@@ -118,7 +118,7 @@
         </h4>
 
         <h3 class="title">
-            <i><u>Example:-</u>~</i><br><br>
+            <i><u>Example:-</u></i><br><br>
         </h3>
 
         <p class="examples">
