--- a/may.html
+++ b/may.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>MAY</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body class="bg">
@@ -20,7 +21,9 @@
             'May' is used to show probability.
         </h4>
 
-        <i><u>Example:</u>~</i><br><br>
+        <h3 class="title">
+            <i><u>Example:-</u></i><br><br>
+        </h3>
         <font color='sky blue'>1. There are black clouds. It <b>may</b> rain today. 
         <br>
         2. He <b>may</b> come today.
@@ -35,7 +38,9 @@
             'May' is used to make a polite request in a question.give permission.It means one is allowed to do something.
         </h4>
 
-        <font color='aqua'><i><u>Example:</u>~</i></font><br><br>
+        <h3 class="title">
+        <i><u>Example:-</u></i><br><br>
+        </h3>
 
         1. <b>May</b> I come in , sir? <br>
         2. <b>May</b> I help you, ma'am? 
@@ -50,7 +55,9 @@
             'May' is used to express a wish or to give a blessing. 
         </h4>
 
-        <font color='aqua'><i><u>Example:</u>~</i></font><br><br>
+        <h3 class="title">
+            <i><u>Example:-</u></i><br><br>
+        </h3>
 
         1. <b>May</b> god bless you , my son! <br>
         2. <b>May</b> you live long! <br>
@@ -63,7 +70,9 @@
             'May' is used to express possibility.
         </h4>
 
-        <font color='aqua'><i><u>Example:</u>~</i></font><br><br>
+        <h3 class="title">
+            <i><u>Example:-</u></i><br><br>
+        </h3>
 
         1. She <b>may</b> come with us for the meeting.
         <br>
@@ -79,14 +88,14 @@
             'May' is used to show predictions. 
         </h4>
 
-        <font color='aqua'><i><u>Example:</u>~</i></font><br><br>
+        <h3 class="title">
+            <i><u>Example:-</u></i><br><br>
+        </h3>
 
         1. They <b>may</b> call tomorrow.I hope so.  
         <br>
         2. He <b>may</b> tell me tomorrow.
         <br>
         <br>
-
-        </font>
     </body>
 </html>
