--- a/may.html
+++ b/may.html
@@ -24,7 +24,7 @@
         <h3 class="title">
             <i><u>Example:-</u></i><br><br>
         </h3>
-        <font color='sky blue'>1. There are black clouds. It <b>may</b> rain today. 
+        1. There are black clouds. It <b>may</b> rain today. 
         <br>
         2. He <b>may</b> come today.
         <br> 
