--- a/may.html
+++ b/may.html
@@ -24,9 +24,9 @@
         <h3 class="title">
             <i><u>Example:-</u></i><br><br>
         </h3>
-        1. There are black clouds. It <b>may</b> rain today. 
+        <p class="examples">1. There are black clouds. It <b>may</b> rain today.</p>
         <br>
-        2. He <b>may</b> come today.
+        <p class="examples">2. He <b>may</b> come today.</p>
         <br> 
         <br>
 
@@ -39,11 +39,11 @@
         </h4>
 
         <h3 class="title">
-        <i><u>Example:-</u></i><br><br>
+            <i><u>Example:-</u></i><br><br>
         </h3>
 
-        1. <b>May</b> I come in , sir? <br>
-        2. <b>May</b> I help you, ma'am? 
+        <p class="examples">1. <b>May</b> I come in , sir? <br></p>
+        <p class="examples">2. <b>May</b> I help you, ma'am?</p>
         <br>
         <br>
 
@@ -59,8 +59,8 @@
             <i><u>Example:-</u></i><br><br>
         </h3>
 
-        1. <b>May</b> god bless you , my son! <br>
-        2. <b>May</b> you live long! <br>
+        <p class="examples">1. <b>May</b> god bless you , my son! <br></p>
+        <p class="examples">2. <b>May</b> you live long! <br></p>
         <br>
 
         <h5 class="uses">
@@ -74,9 +74,9 @@
             <i><u>Example:-</u></i><br><br>
         </h3>
 
-        1. She <b>may</b> come with us for the meeting.
+        <p class="examples">1. She <b>may</b> come with us for the meeting.</p>
         <br>
-        2. He <b>may</b> be able to help you for your project.
+        <p class="examples">2. He <b>may</b> be able to help you for your project.</p>
         <br>
         <br>
         
@@ -92,9 +92,9 @@
             <i><u>Example:-</u></i><br><br>
         </h3>
 
-        1. They <b>may</b> call tomorrow.I hope so.  
+        <p class="examples">1. They <b>may</b> call tomorrow.I hope so.</p>
         <br>
-        2. He <b>may</b> tell me tomorrow.
+        <p class="examples">2. He <b>may</b> tell me tomorrow.</p>
         <br>
         <br>
     </body>
