--- a/must.html
+++ b/must.html
@@ -1,54 +1,78 @@
+<!DOCTYPE html>
 <html>
 
-<head>
-<title>Must</title>
-</head>
+    <head>
+        <title>MUST</title>
+    </head>
+    <body>
+        <div class="content">
+            <h3 class="title">
+                <center><b><u>MUST</u></b></center>
+            </h3>
+        </div>
 
-<body bgcolor="aqua">
+        <h5 class="uses">
+            (a)
+        </h5>
+        <h4 class="uses1">
+            'Must' is used to express necessary or obligation.
+        </h4>
 
-<h3><font size="80"color="darkred"><center><b>~<u>MUST</u>~</b></center></font></h3>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <i><u>Example:-</u></i><br><br>
+        1. We <b>must</b> have a raincoat as it's raining.<small>(necessary)</small>
+        </small><br> 
+        <br>
 
-<h4><font color='red'><b><u>(a)</u></b>&nbsp;&nbsp;'Must' is used to express necessary or obligation.
-</font></h4>
+        <h5 class="uses">
+            (b)
+        </h5>
 
-<font color='black'><i><u>Example:</u>~</i></font><br><br>
-<font color='blue'>1. We <b>must</b> have a raincoat as it's raining.<small>(necessary)</small>
-</small><br> 
-<br>
+        <h4 class="uses1">
+            'Must' is also used for inference or probability. 
+        </h4>
 
-<h4><font color='red'><b><u>(b)</u></b>&nbsp;&nbsp;'Must' is also used for inference or probability. 
-</font></h4>
+        <i><u>Example:-</u></i><br><br>
 
-<font color='black'><i><u>Example:</u>~</i></font><br><br>
+        1. He <b>must</b> be at least thirty five years old.<br>
+        <br>
 
-1. He <b>must</b> be at least thirty five years old.<br>
-<br>
+        <h5 class="uses">
+            (c)
+        </h5>
 
-<h4><font color='red'><b><u>(c)</u></b>&nbsp;&nbsp;'Must' is used to express immediate or future obligation or necessity.
-</font></h4>
+        <h4 class="uses1">
+            'Must' is used to express immediate or future obligation or necessity.
+        </h4>
 
-<font color='black'><i><u>Example:</u>~</i></font><br><br>
+        <i><u>Example:-</u></i><br><br>
 
-1. We <b>must</b> be careful while driving.
-<br>
+        1. We <b>must</b> be careful while driving.
+        <br>
 
-<h4><font color='red'><b><u>(d)</u></b>&nbsp;&nbsp;'Must' is used to express recommendation.
-</font></h4>
+        <h5 class="uses">
+             (d)
+        </h5>
+        <h4 class="uses1">
+            'Must' is used to express recommendation.
+        </h4>
 
-<font color='black'><i><u>Example:</u>~</i></font><br><br>
+        <i><u>Example:-</u></i><br><br>
 
-1. You <b>Must</b> watch it. It's the best film I've ever seen. 
-<br>
+        1. You <b>Must</b> watch it. It's the best film I've ever seen. 
+        <br>
 
-<h4><font color='red'><b><u>(e)</u></b>&nbsp;&nbsp;'Must' is used to show certainly.
-</font></h4>
+        <h5 class="uses">
+            (e)
+        </h5>
 
-<font color='black'><i><u>Example:</u>~</i></font><br><br>
+        <h4 class="uses1">
+            'Must' is used to show certainly.
+        </h4>
 
-1. There is no one in the hall. All <b>must</b> have gone now. 
-<br>
-<br>
-</font>
-</body>
+        <i><u>Example:</u>~</i><br><br>
+
+        1. There is no one in the hall. All <b>must</b> have gone now. 
+        <br>
+        <br>
+    </body>
 </html>
