--- a/must.html
+++ b/must.html
@@ -14,11 +14,15 @@
         <h5 class="uses">
             (a)
         </h5>
+
         <h4 class="uses1">
             'Must' is used to express necessary or obligation.
         </h4>
 
-        <i><u>Example:-</u></i><br><br>
+        <h3 class="title">
+            <i><u>Example:-</u></i><br><br>
+        </h3>
+
         1. We <b>must</b> have a raincoat as it's raining.<small>(necessary)</small>
         </small><br> 
         <br>
@@ -31,7 +35,9 @@
             'Must' is also used for inference or probability. 
         </h4>
 
-        <i><u>Example:-</u></i><br><br>
+        <h3 class="title">
+            <i><u>Example:-</u></i><br><br>
+        </h3>
 
         1. He <b>must</b> be at least thirty five years old.<br>
         <br>
@@ -44,7 +50,9 @@
             'Must' is used to express immediate or future obligation or necessity.
         </h4>
 
-        <i><u>Example:-</u></i><br><br>
+        <h3 class="title">
+            <i><u>Example:-</u></i><br><br>
+        </h3>
 
         1. We <b>must</b> be careful while driving.
         <br>
@@ -56,7 +64,9 @@
             'Must' is used to express recommendation.
         </h4>
 
-        <i><u>Example:-</u></i><br><br>
+        <h3 class="title">
+            <i><u>Example:-</u></i><br><br>
+        </h3>
 
         1. You <b>Must</b> watch it. It's the best film I've ever seen. 
         <br>
@@ -69,7 +79,9 @@
             'Must' is used to show certainly.
         </h4>
 
-        <i><u>Example:</u>~</i><br><br>
+        <h3 class="title">
+            <i><u>Example:-</u></i><br><br>
+        </h3>
 
         1. There is no one in the hall. All <b>must</b> have gone now. 
         <br>
