--- a/must.html
+++ b/must.html
@@ -23,8 +23,10 @@
             <i><u>Example:-</u></i><br><br>
         </h3>
 
-        1. We <b>must</b> have a raincoat as it's raining.<small>(necessary)</small>
-        </small><br> 
+        <p class="examples">
+            1. We <b>must</b> have a raincoat as it's raining.<small>(necessary)</small>
+        </p>
+        <br> 
         <br>
 
         <h5 class="uses">
@@ -39,7 +41,9 @@
             <i><u>Example:-</u></i><br><br>
         </h3>
 
-        1. He <b>must</b> be at least thirty five years old.<br>
+        <p class="examples">
+            1. He <b>must</b> be at least thirty five years old.<br>
+        </p>
         <br>
 
         <h5 class="uses">
@@ -54,7 +58,9 @@
             <i><u>Example:-</u></i><br><br>
         </h3>
 
+        <p class="examples">
         1. We <b>must</b> be careful while driving.
+        </p>
         <br>
 
         <h5 class="uses">
@@ -68,7 +74,9 @@
             <i><u>Example:-</u></i><br><br>
         </h3>
 
+        <p class="examples">
         1. You <b>Must</b> watch it. It's the best film I've ever seen. 
+        </p>
         <br>
 
         <h5 class="uses">
@@ -83,7 +91,9 @@
             <i><u>Example:-</u></i><br><br>
         </h3>
 
-        1. There is no one in the hall. All <b>must</b> have gone now. 
+        <p class="examples">
+            1. There is no one in the hall. All <b>must</b> have gone now.
+        </p>
         <br>
         <br>
     </body>
