--- a/must.html
+++ b/must.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>MUST</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="content">
