--- a/must.html
+++ b/must.html
@@ -5,7 +5,7 @@
         <title>MUST</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body class="bg">
         <div class="content">
             <h3 class="title">
                 <center><b><u>MUST</u></b></center>
