--- a/table.html
+++ b/table.html
@@ -49,7 +49,7 @@
                 </tr>
                 <tr>
                     <td>10</td>
-                    <td colspan="2"><a href="Need.html">Need</a></td>
+                    <td colspan="2"><a href="need.html">Need</a></td>
                 </tr>
                 <tr>
                     <td>11</td>
