--- a/table.html
+++ b/table.html
@@ -53,7 +53,7 @@
                 </tr>
                 <tr>
                     <td>11</td>
-                    <td colspan="2"><a href="Ought-to.html">Ought to</a></td>
+                    <td colspan="2"><a href="ought.html">Ought to</a></td>
                 </tr>
             </Table>
     </body>
