--- a/should.html
+++ b/should.html
@@ -1,21 +1,78 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>SHOULD</title>
-</head>
-<body>
-<center><h1><u>Should</u></h1></center>
-<b>(A)</b> 'Shold' is used to show obligation, advice or an assumption.
-<h3><u> Example</u></h3>
-<li> You <b>should</b> be more careful this time.</li>
-<li> You <b>should</b>'nt carry pet animals in the restaurant.</li>
-<li>They <b>should</b> be there at this time.</li><br> 
-<b>(B)</b>'Should' is used to express a sense of duty or desirability.
-<h3><u>Example</u></h3>
-<li>We <b>Should</b> help the needy.</li>
-<li>Peter <b>Should</b> pay his fees in time.</li>
-<li>The children <b>should</b> obey their parents and teachers.</li><br>
-<b>(C)</b> 'Should' is used to show expectations.
-<h3><u>Example</u></h3>
-<li>They <b>should</b>have done it by that time.</li> 
-</body>
+    <head>
+        <title>SHOULD</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body class="bg">
+        <div class="content">
+            <h3 class="title">
+                <center><u>Should</u></center>
+            </h3>
+        </div>
+        <h5 class="uses">
+            (a)
+        </h5>
+
+        <h4 class="uses1">
+        'Should' is used to show obligation, advice or an assumption.
+        </h4>
+
+        <h3 class="title">
+            <u> Example</u>
+        </h3>
+        <ol>
+
+        <p class="examples">
+            <li> You <b>should</b> be more careful this time.</li>
+        </p>
+
+        <p class="examples">
+            <li> You <b>should</b>'nt carry pet animals in the restaurant.</li>
+        </p>
+
+        <p class="examples">
+            <li>They <b>should</b> be there at this time.</li>
+        </p>
+        </ol><br>
+
+        <h5 class="uses">
+            (b)
+        </h5>
+
+        <h4 class="uses1">
+        'Should' is used to express a sense of duty or desirability.
+        </h4>
+
+        <h3 class="title">
+            <u>Example:-</u>
+        </h3>
+        <ol>
+
+        <p class="examples">
+            <li>We <b>Should</b> help the needy.</li>
+        </p>
+        
+        <p class="examples">
+            <li>Peter <b>Should</b> pay his fees in time.</li>
+        </p>
+        
+        <p class="examples"><li>The children <b>should</b> obey their parents and teachers.</li>
+        </p><br>
+        </ol>
+
+        <h5>
+            (c)
+        </h5>
+
+        <h4 class="uses1">
+            'Should' is used to show expectations.
+        </h4>
+
+        <h3 class="title">
+            <u>Example</u>
+        </h3>
+
+        <p class="examples"><li>They <b>should</b>have done it by that time.</li></p>
+    </body>
 </html>
