--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
     <body class="bg">
-        <div  id="header">
-        <h3>Introduction</h3>
-        </div>
-         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQPYwSGHzu0DESTQv2-ARkkCDPfMjeppq8mQwpdI_AeprGo3KMbk5jKQLKUuMavFPWbc7DrRySOZRpn/embed?start=false&loop=false&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <article class="wrapper">
+            <div  id="header">
+                <h3>Introduction</h3>
+            </div>
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQPYwSGHzu0DESTQv2-ARkkCDPfMjeppq8mQwpdI_AeprGo3KMbk5jKQLKUuMavFPWbc7DrRySOZRpn/embed?start=false&loop=false&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+         </article>
     </body>
 </html>
