--- a/might.html
+++ b/might.html
@@ -40,7 +40,7 @@
             1.He <b>might</b> win the race next time.<br>
         </p>
 
-        <p>
+        <p class="examples">
             2.He <b>might</b> help her in that case.<br><br>
         </p>
         
