--- a/might.html
+++ b/might.html
@@ -6,7 +6,7 @@
     </head>
     <body class="bg">
         <div id="content">
-            <h2 class="title">
+            <h2 class="title" id="main">
                 <center><b><u>Might</u></b></center>
             </h2>
         </div>
