--- a/shall.html
+++ b/shall.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body class="bg">
-        <div class="content">
+        <div class="content" id="main">
         <center><b><u><h1>" Shall, Will "</h1></u></b></center><br>
         </div>
         <br>
