--- a/should.html
+++ b/should.html
@@ -6,7 +6,7 @@
     </head>
     <body class="bg">
         <div class="content">
-            <h3 class="title">
+            <h3 class="title" id="main">
                 <center><u>Should</u></center>
             </h3>
         </div>
