--- a/can.html
+++ b/can.html
@@ -7,7 +7,7 @@
 
     <body class="bg">
         <div class="content">
-            <h3 class="title">
+            <h3 class="title" id="main">
                 <center><b><u>CAN</u></b></center>
             </h3>
         </div>
