--- a/must.html
+++ b/must.html
@@ -7,7 +7,7 @@
     </head>
     <body class="bg">
         <div class="content">
-            <h3 class="title">
+            <h3 class="title" id="main">
                 <center><b><u>MUST</u></b></center>
             </h3>
         </div>
