--- a/table.html
+++ b/table.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body class="bg">
-        <h1>Auxiliaries</h1>
+        <h1 id="main">Auxiliaries</h1>
             <Table>
                 <tr>
                     <th>Sr. No</td>
