--- a/might.html
+++ b/might.html
@@ -53,9 +53,9 @@
         </p>
 
 
-        <p class="examples">
+        <h3 class="title">
             <b>Example:</b><br>
-        </p>
+        </h3>
         
         <p class="examples">
             1.You <b>might</b> want to lower the seat so that your legs reach the pedals.<br><br>
