--- a/might.html
+++ b/might.html
@@ -54,7 +54,7 @@
 
 
         <h3 class="title">
-            <b>Example:</b><br>
+            <b>Example:-</b><br>
         </h3>
         
         <p class="examples">
