--- a/ought.html
+++ b/ought.html
@@ -1,6 +1,7 @@
 <html>
       <head>
             <title>OUGHT TO</title>
+            <link rel="stylesheet" href="styles.css">
       </head>
 	  
    <body>
