--- a/ought.html
+++ b/ought.html
@@ -4,7 +4,7 @@
             <link rel="stylesheet" href="styles.css">
       </head>
 	  
-   <body>
+   <body class="bg">
       <h3 class="title" id="main">    
             <center><b>Ought to</b></center>
       </h3>
