--- a/ought.html
+++ b/ought.html
@@ -5,9 +5,11 @@
       </head>
 	  
    <body class="bg">
-      <h3 class="title" id="main">    
-            <center><b>Ought to</b></center>
-      </h3>
+      <div class="content">
+            <h3 class="title" id="main">    
+                  <center><b>Ought to</b></center>
+            </h3>
+      </div>
       
       <h5 class="uses">
             (a)
