--- a/ought.html
+++ b/ought.html
@@ -18,7 +18,7 @@
             'Ought to' is used to indicate an obligation, duty or correct/sensible action.
       </h4>
 
-      <h3 class="titles">
+      <h3 class="title">
 	      <b><u>Examples:-</u></b>
       </h3>
 		  
