--- a/shall.html
+++ b/shall.html
@@ -100,7 +100,7 @@
         </h5>
 
         <h4 class="uses1">
-        <b>'Will'</b> is used to show promose.<br>
+        <b>'Will'</b> is used to show promise.<br>
         </h4>
 
         <h3 class="title">
