--- a/should.html
+++ b/should.html
@@ -21,20 +21,19 @@
         <h3 class="title">
             <u> Example</u>
         </h3>
-        <ol>
 
         <p class="examples">
-            <li> You <b>should</b> be more careful this time.</li>
+            1. You <b>should</b> be more careful this time.
         </p>
 
         <p class="examples">
-            <li> You <b>should</b>'nt carry pet animals in the restaurant.</li>
+            2. You <b>should</b>'nt carry pet animals in the restaurant.
         </p>
 
         <p class="examples">
-            <li>They <b>should</b> be there at this time.</li>
+            3. They <b>should</b> be there at this time.
         </p>
-        </ol><br>
+        <br>
 
         <h5 class="uses">
             (b)
@@ -47,19 +46,18 @@
         <h3 class="title">
             <u>Example:-</u>
         </h3>
-        <ol>
 
         <p class="examples">
-            <li>We <b>Should</b> help the needy.</li>
+            1. We <b>Should</b> help the needy.
         </p>
         
         <p class="examples">
-            <li>Peter <b>Should</b> pay his fees in time.</li>
+            Peter <b>Should</b> pay his fees in time.
         </p>
         
-        <p class="examples"><li>The children <b>should</b> obey their parents and teachers.</li>
+        <p class="examples">
+            The children <b>should</b> obey their parents and teachers.
         </p><br>
-        </ol>
 
         <h5>
             (c)
@@ -70,9 +68,9 @@
         </h4>
 
         <h3 class="title">
-            <u>Example</u>
+            <u>Example:-</u>
         </h3>
 
-        <p class="examples"><li>They <b>should</b>have done it by that time.</li></p>
+        <p class="examples">1. They <b>should</b>have done it by that time.</p>
     </body>
 </html>
