--- a/ought.html
+++ b/ought.html
@@ -7,7 +7,7 @@
    <body class="bg">
       <div class="content">
             <h3 class="title" id="main">    
-                  <center><b>Ought to</b></center>
+                  <center><b><u>Ought to</u></b></center>
             </h3>
       </div>
       
@@ -23,11 +23,11 @@
       </h3>
 		  
 	<p class="examples">
-              1. He <b><u> ought</u> </b> not <b><u> to </u></b> allow parking here.
+              <i>1. He <b><u> ought</u> </b> not <b><u> to </u></b> allow parking here.</i>
       </p>
 
       <p class="examples">
-            2. We <b><u> ought to</u> </b> help that poor women.
+            <i>2. We <b><u> ought to</u> </b> help that poor women.</i>
       </p>
 
       <h5 class="uses">
@@ -44,7 +44,7 @@
       </h3>
 
        <p class="examples">
-            1. This movie <u><b>ought to </b></u> be a super duper hit.
+            <i>1. This movie <u><b>ought to </b></u> be a super duper hit.</i>
       </p>
    </body>
 </html>
