--- a/have.html
+++ b/have.html
@@ -7,7 +7,7 @@
    <body class="bg">
       <div class="content">
             <h3 class="title" id="main">
-                  <b>Have to/Has to/Had to:~</b>
+                  <b><u>Have to/Has to/Had to:-</u></b>
             </h3>
       </div>
       
