--- a/have.html
+++ b/have.html
@@ -20,7 +20,7 @@
       </h4>
       
       <h3 class="title">
-            <b>Examples:-</b>
+            <i><u>Examples:-</u></i>
       </h3>
 
       <p class="examples">1. I <b>have to</b> work hard to get first class this time.</p></h3>
