--- a/might.html
+++ b/might.html
@@ -20,7 +20,7 @@
         </p>
 
         <h4 class="title">
-            <b>Example:</b><br>
+            <i><u>Examples:-</u></i><br>
         </h4>
        
         <p class="examples">
@@ -35,7 +35,7 @@
             </p>
 
         <p class="title">
-            <b>Examples:-</b><br>
+            <i><u>Examples:-</u></i><br>
         </p>
 
         <p class="examples">
@@ -56,7 +56,7 @@
 
 
         <h3 class="title">
-            <b>Example:-</b><br>
+            <i><u>Examples:-</u></i><br>
         </h3>
         
         <p class="examples">
