--- a/need.html
+++ b/need.html
@@ -20,7 +20,7 @@
       </h4>
 
       <h3 class="title">
-            <b><u>Examples:-</u></b>
+            <i><u>Examples:-</u></i>
       </h3>
 
       <p class="examples">
