--- a/ought.html
+++ b/ought.html
@@ -19,7 +19,7 @@
       </h4>
 
       <h3 class="title">
-	      <b><u>Examples:-</u></b>
+	      <i><u>Examples:-</u></i>
       </h3>
 		  
 	<p class="examples">
@@ -40,7 +40,7 @@
       
 
       <h3 class="title">
-            <b><u>Examples:-</u></b>
+            <i><u>Examples:-</u></i>
       </h3>
 
        <p class="examples">
