--- a/shall.html
+++ b/shall.html
@@ -19,7 +19,7 @@
         </h4>
 
         <h3 class="title">
-        <b><u>Examples:-</u></b><br>
+        <i><u>Examples:-</u></i><br>
         </h3>
 
         <p class="examples">
@@ -45,7 +45,7 @@
         </h4>
 
         <h3 class="title">
-        <b><u>Examples:-</u></b><br>
+        <i><u>Examples:-</u></i><br>
         </h3>
 
         <p class="examples">
@@ -68,7 +68,7 @@
         <br>
         
         <h3 class="title">
-        <b><u>Example:-</u></b><br>
+        <i><u>Examples:-</u></i><br>
         </h3>
 
         <p class="examples">
@@ -86,7 +86,7 @@
         </h4>
 
         <h3 class="title">
-        <b><u>Example:-</u></b><br>
+        <i><u>Examples:-</u></i><br>
         </h3>
 
         <p class="examples">
@@ -104,7 +104,7 @@
         </h4>
 
         <h3 class="title">
-        <b><u>Example:-</u></b><br>
+        <i><u>Examples:-</u></i><br>
         </h3>
 
         <p class="examples">
