--- a/should.html
+++ b/should.html
@@ -19,7 +19,7 @@
         </h4>
 
         <h3 class="title">
-            <u> Example</u>
+            <i><u>Examples:-</u></i>
         </h3>
 
         <p class="examples">
@@ -44,7 +44,7 @@
         </h4>
 
         <h3 class="title">
-            <u>Example:-</u>
+            <i><u>Examples:-</u></i>
         </h3>
 
         <p class="examples">
@@ -68,7 +68,7 @@
         </h4>
 
         <h3 class="title">
-            <u>Example:-</u>
+            <i><u>Examples:-</u></i>
         </h3>
 
         <p class="examples">1. They <b>should</b>have done it by that time.</p>
