--- a/might.html
+++ b/might.html
@@ -24,7 +24,7 @@
         </h4>
        
         <p class="examples">
-            <i>1.I told you that he <b>might</b> come with us.<br><br></i>>
+            <i>1.I told you that he <b>might</b> come with us.<br><br></i>
         </p>
 
         <h5 class="uses">
