--- a/should.html
+++ b/should.html
@@ -59,7 +59,7 @@
             The children <b>should</b> obey their parents and teachers.
         </p><br>
 
-        <h5>
+        <h5 class="uses">
             (c)
         </h5>
 
@@ -71,6 +71,6 @@
             <i><u>Examples:-</u></i>
         </h3>
 
-        <p class="examples">1. They <b>should</b>have done it by that time.</p>
+        <p class="examples">1. They <b>should</b> have done it by that time.</p>
     </body>
 </html>
